html 5 - conhecendo a os atributos required e placeholder

--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -21,5 +21,13 @@
 				<figcaption>um lindo campo de arroz....</figcaption>
 			</figure>
 		</div>
+		<div>
+			<h3>preencha o formulario para receber as novidades</h3>
+			<form>
+				<label>Nome</label>
+				<input type="text" name="name" required placeholder="Digite seu nome completo">
+				<input type="submit" name="Enviar">
+			</form>
+		</div>
 	</body>
 </html>
