html 5 - conhecendo a os atributos type email e autofocos

--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -25,6 +25,8 @@
 			<h3>preencha o formulario para receber as novidades</h3>
 			<form>
 				<label>Nome</label>
+				<input type="email" name="email" required placeholder="Digite seu melhor email" autofocus>
+				<label>Email</label>
 				<input type="text" name="name" required placeholder="Digite seu nome completo">
 				<input type="submit" name="Enviar">
 			</form>
