--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -31,5 +31,8 @@
 				<input type="submit" name="Enviar">
 			</form>
 		</div>
+		<div>
+			<p contenteditable="true">este é um paragrafo que pode ser editado</p>
+		</div>
 	</body>
 </html>
