html 5 - introducao a html semantico

--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -4,35 +4,52 @@
 		<title>recursos html 5</title>
 	</head>
 	<body>
-		<h1>recursos do html 5</h1>
-		<div>
-			<video width="320" height="240" controls>
-				<source src="video/cidade.mp4" type="video/mp4" >
-			</video>
-		</div>
-		<div>
-			<audio controls>
-				<source src="audio/music.mp3" type="audio/mpeg" >
-			</audio>
-		</div>
-		<div>
-			<figure>
-				<img src="img/ricefield.jpg" alt="campo de arroz">
-				<figcaption>um lindo campo de arroz....</figcaption>
-			</figure>
-		</div>
-		<div>
-			<h3>preencha o formulario para receber as novidades</h3>
-			<form>
-				<label>Nome</label>
-				<input type="email" name="email" required placeholder="Digite seu melhor email" autofocus>
-				<label>Email</label>
-				<input type="text" name="name" required placeholder="Digite seu nome completo">
-				<input type="submit" name="Enviar">
-			</form>
-		</div>
-		<div>
-			<p contenteditable="true">este é um paragrafo que pode ser editado</p>
-		</div>
+		<header>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Produtos</a></li>
+					<li><a href="#">Contatos</a></li>
+				</ul>
+			</nav>
+		</header>
+		<article>
+			<h1>recursos do html 5</h1>
+			<div>
+				<video width="320" height="240" controls>
+					<source src="video/cidade.mp4" type="video/mp4" >
+				</video>
+			</div>
+			<div>
+				<audio controls>
+					<source src="audio/music.mp3" type="audio/mpeg" >
+				</audio>
+			</div>
+			<div>
+				<figure>
+					<img src="img/ricefield.jpg" alt="campo de arroz">
+					<figcaption>um lindo campo de arroz....</figcaption>
+				</figure>
+			</div>
+			<div>
+				<h3>preencha o formulario para receber as novidades</h3>
+				<form>
+					<label>Nome</label>
+					<input type="email" name="email" required placeholder="Digite seu melhor email" autofocus>
+					<label>Email</label>
+					<input type="text" name="name" required placeholder="Digite seu nome completo">
+					<input type="submit" name="Enviar">
+				</form>
+			</div>
+			<div>
+				<p contenteditable="true">este é um paragrafo que pode ser editado</p>
+			</div>
+		</article>
+		<aside>
+			<p>Confira os nossos planos</p>
+		</aside>
+		<footer>
+			<p>rodape</p>
+		</footer>
 	</body>
 </html>
