html 5 - conhecendo a tag datails e sumary

--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -48,6 +48,10 @@
 		<aside>
 			<p>Confira os nossos planos</p>
 		</aside>
+		<details open="open">
+			<summary>Cachorro</summary>
+			<p>é um mamifero de 4 patas</p>
+		</details>
 		<footer>
 			<p>rodape</p>
 		</footer>
