html 5 - conhecendo a tag datalist

--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -52,6 +52,16 @@
 			<summary>Cachorro</summary>
 			<p>é um mamifero de 4 patas</p>
 		</details>
+		<form>
+			<p>Animais</p>
+			<input list="animais" name="animal" >
+			<datalist id="animais">
+				<option value="cachorro"></option>
+				<option value="gato"></option>
+				<option value="cavalo"></option>
+				<option value="elefante"></option>
+			</datalist>
+		</form>
 		<footer>
 			<p>rodape</p>
 		</footer>
