--- a/html5-css3-avancado/html5/index.html
+++ b/html5-css3-avancado/html5/index.html
@@ -62,6 +62,10 @@
 				<option value="elefante"></option>
 			</datalist>
 		</form>
+		<p>
+			barra de loading
+		</p>
+		<progress value="63" max="100"></progress>
 		<footer>
 			<p>rodape</p>
 		</footer>
