--- a/html5-css3-avancado/css3/index.html
+++ b/html5-css3-avancado/css3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>css</title>
+        <title>css3</title>
         <link rel="stylesheet" type="text/css" href="styles.css" >
     </head>
     <body>
