--- a/html5-css3-avancado/css3/index.html
+++ b/html5-css3-avancado/css3/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <h1>recursos css3</h1>
+        <!--
         <div class="animation-div"></div>
         <div class="animation-div2"></div>
+        -->
+        <div class="animation-div3"></div>
     </body>
 </html>
