--- a/html5-css3-avancado/css3/index.html
+++ b/html5-css3-avancado/css3/index.html
@@ -18,12 +18,19 @@
         <div id="animation-div"></div>
         <button class="btn">enviar</button>
         <div class="transition"></div>
-        -->
+
         <div class="div-calc">
             <div class="innerdiv-calc calc1"></div>
             <div class="innerdiv-calc calc2"></div>
             <div class="innerdiv-calc calc3"></div>
             <div class="innerdiv-calc calc4"></div>
         </div>
+        -->
+        <div class="gradient-box gradient1"></div>
+        <div class="gradient-box gradient2"></div>
+        <div class="gradient-box gradient3"></div>
+        <div class="gradient-box gradient4"></div>
+        <div class="gradient-box gradient5"></div>
+        <div class="gradient-box gradient6"></div>
     </body>
 </html>
