--- a/html5-css3-avancado/css3/index.html
+++ b/html5-css3-avancado/css3/index.html
@@ -32,9 +32,11 @@
         <div class="gradient-box gradient4"></div>
         <div class="gradient-box gradient5"></div>
         <div class="gradient-box gradient6"></div>
-        -->
+
         <div class="gradient-box gradient7"></div>
         <div class="gradient-box gradient8"></div>
         <div class="gradient-box gradient9"></div>
+        -->
+        <h1 class="fontface">esta fonte veio de um link externo</h1>
     </body>
 </html>
