css 3 - layout responsivos com mediaquery

--- a/html5-css3-avancado/css3/index.html
+++ b/html5-css3-avancado/css3/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>css3</title>
         <link rel="stylesheet" type="text/css" href="styles.css" >
+        <meta name="viewport" content="width=device-width, initial-scale=1" >
     </head>
     <body>
         <h1>recursos css3</h1>
@@ -36,7 +37,10 @@
         <div class="gradient-box gradient7"></div>
         <div class="gradient-box gradient8"></div>
         <div class="gradient-box gradient9"></div>
-        -->
+
         <h1 class="fontface">esta fonte veio de um link externo</h1>
+        -->
+
+        <div class="mediaquery"></div>
     </body>
 </html>
