--- a/html5-css3-avancado/css3/index.html
+++ b/html5-css3-avancado/css3/index.html
@@ -39,8 +39,12 @@
         <div class="gradient-box gradient9"></div>
 
         <h1 class="fontface">esta fonte veio de um link externo</h1>
-        -->
+
 
         <div class="mediaquery"></div>
+
+        -->
+        <div class="div-border border-radius1"></div>
+        <div class="div-border border-radius2"></div>
     </body>
 </html>
