--- a/html5-css3-avancado/projeto-doceria/index.html
+++ b/html5-css3-avancado/projeto-doceria/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Doceria Single page</title>
+        <link rel="stylesheet" type="text/css" href="css/reset.css" >
+        <link rel="stylesheet" type="text/css" href="css/styles.css" >
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>Doceria</h1>
-        
+
     </body>
 </html>
