--- a/html5-css3-avancado/projeto-doceria/index.html
+++ b/html5-css3-avancado/projeto-doceria/index.html
@@ -7,7 +7,13 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Doceria</h1>
+        <div class="container">
+            <div id="sidebar">
 
+            </div>
+            <div class="content">
+                
+            </div>
+        </div>
     </body>
 </html>
