--- a/html5-css3-avancado/projeto-doceria/index.html
+++ b/html5-css3-avancado/projeto-doceria/index.html
@@ -9,7 +9,20 @@
     <body>
         <div class="container">
             <div id="sidebar">
-
+                <div class="sidebar-container">
+                    <img class="logo-doceria" src="img/stand.png" alt="logo doceria" />
+                    <h1>Doceria</h1>
+                    <nav>
+                        <ul>
+                            <li><a href="#sessao-bemvindo">Bem vindo</a></li>
+                            <li><a href="#sessao-sobre">Sobre nos</a></li>
+                            <li><a href="#sessao-doces1">Doces 1</a></li>
+                            <li><a href="#sessao-doces2">Doces 2</a></li>
+                            <li><a href="#sessao-doces3">Doces 3</a></li>
+                            <li><a href="#sessao-contato">Entre em contato</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <div class="content">
                 
