projeto doceria - html do conteudo do site parte 1

--- a/html5-css3-avancado/projeto-doceria/index.html
+++ b/html5-css3-avancado/projeto-doceria/index.html
@@ -25,7 +25,11 @@
                 </div>
             </div>
             <div class="content">
-                
+                <main>
+                    <section id="sessao-bemvindo">
+                        <div class="banner"></div>
+                    </section>
+                </main>
             </div>
         </div>
     </body>
