--- a/html5-css3-avancado/projeto-doceria/index.html
+++ b/html5-css3-avancado/projeto-doceria/index.html
@@ -28,7 +28,79 @@
                 <main>
                     <section id="sessao-bemvindo">
                         <div class="banner"></div>
+                        <div class="sessao-bemvindo-content">
+                            <h1>Seja bem vindo a doceria</h1>
+                            <div class="sessao-minibanner"></div>
+                            <div class="sessao-descricao">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia labore velit optio voluptatibus? Veniam recusandae harum perferendis deleniti optio cupiditate distinctio corporis illum. Harum hic consectetur nihil corrupti cumque!
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia labore velit optio voluptatibus? Veniam recusandae harum perferendis deleniti optio cupiditate distinctio corporis illum. Harum hic consectetur nihil corrupti cumque!
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia labore velit optio voluptatibus? Veniam recusandae harum perferendis deleniti optio cupiditate distinctio corporis illum. Harum hic consectetur nihil corrupti cumque!
+                                </p>
+                                <a href="#" class="sessao-bemvindo-btn">Leia mais</a>
+                            </div>
+                        </div>
                     </section>
+
+                    <section id="sessao-sobre">
+                        <div class="sessao-content">
+                            <h1>Sobre nos</h1>
+                            <div class="sessao-minibanner"></div>
+                            <div class="sessao-descricao">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia labore velit optio voluptatibus? Veniam recusandae harum perferendis deleniti optio cupiditate distinctio corporis illum. Harum hic consectetur nihil corrupti cumque!
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia labore velit optio voluptatibus? Veniam recusandae harum perferendis deleniti optio cupiditate distinctio corporis illum. Harum hic consectetur nihil corrupti cumque!
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia labore velit optio voluptatibus? Veniam recusandae harum perferendis deleniti optio cupiditate distinctio corporis illum. Harum hic consectetur nihil corrupti cumque!
+                                </p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section id="sessao-doces1">
+                        <h2>Doces 1</h2>
+                        <div class="doces1-imgs banner-galeria" id="img1"></div>
+                        <div class="doces1-imgs banner-galeria" id="img2"></div>
+                        <div class="doces1-imgs banner-galeria" id="img3"></div>
+                        <div class="doces1-imgs banner-galeria" id="img4"></div>
+                        <div class="doces1-imgs banner-galeria" id="img5"></div>
+                    </section>
+
+                    <section id="sessao-doces2">
+                        <h2>Doces 2</h2>
+                        <div class="doces2-imgs banner-galeria" id="img6"></div>
+                        <div class="doces2-imgs banner-galeria" id="img7"></div>
+                        <div class="doces2-imgs banner-galeria" id="img8"></div>
+                    </section>
+
+                    <section id="sessao-doces3">
+                        <h2>Doces 3</h2>
+                        <div class="doces3-imgs banner-galeria" id="img9"></div>
+                        <div class="doces3-imgs banner-galeria" id="img10"></div>
+                        <div class="doces3-imgs banner-galeria" id="img11"></div>
+                        <div class="doces3-imgs banner-galeria" id="img12"></div>
+                    </section>
+
+                    <section id="sessao-contato">
+                        <h2>Entre em contato</h2>
+                        <form id="form-contato">
+                            <input type="text" name="name" placeholder="Nome" />
+                            <input type="email" name="email" placeholder="Email" />
+                            <textarea name="message" placeholder="Escreva sua mensagem"></textarea>
+                            <input type="submit" value="Enviar" />
+                        </form>
+                    </section>
+
+                    <footer>
+                        <p>HoraDeCodar</p>
+                    </footer>
                 </main>
             </div>
         </div>
