--- a/html5-css3-avancado/projeto-hdchost/index.html
+++ b/html5-css3-avancado/projeto-hdchost/index.html
@@ -4,8 +4,10 @@
         <title>hdc host</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="https://kit.fontawesome.com/a290182793.js"></script>
     </head>
     <body>
         <h1>hdc host</h1>
+        <i class="fas fa-align-center"></i>
     </body>
 </html>
