--- a/html5-css3-avancado/projeto-hdchost/index.html
+++ b/html5-css3-avancado/projeto-hdchost/index.html
@@ -7,7 +7,69 @@
         <script src="https://kit.fontawesome.com/a290182793.js"></script>
     </head>
     <body>
-        <h1>hdc host</h1>
-        <i class="fas fa-align-center"></i>
+        <div class="container">
+            <div class="navbar-container">
+                <nav>
+                    <a href="#"><img class="logo" src="img/hdchostlogo.png"></a>
+                    <ul class="navbar-items">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Planos</a></li>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#" class="default-btn">Login</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <main>
+                <div class="main-banner">
+                    <h1>hDC Host</h1>
+                    <p>Os melhores planos para quaquer tipo de projeto</p>
+                </div>
+                <section class="specialties-container">
+                    <ul>
+                        <li>
+                            <i class="fas fa-shield-alt"></i>
+                            <h3>Seguranca</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vitae delectus necessitatibus temporibus? Molestias fugit, alias nobis blanditiis at et explicabo ipsa, impedit assumenda odio esse numquam laboriosam ut labore?
+                            </p>
+                        </li>
+                        <li>
+                            <i class="fas fa-rocket"></i>
+                            <h3>Seguranca</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vitae delectus necessitatibus temporibus? Molestias fugit, alias nobis blanditiis at et explicabo ipsa, impedit assumenda odio esse numquam laboriosam ut labore?
+                            </p>
+                        </li>
+                        <li>
+                            <i class="fas fa-comments"></i>
+                            <h3>Seguranca</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vitae delectus necessitatibus temporibus? Molestias fugit, alias nobis blanditiis at et explicabo ipsa, impedit assumenda odio esse numquam laboriosam ut labore?
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="pricing-container">
+                    <h1>PLanos e Precos</h1>
+                    <p>Selecione o plano perfeito para você</p>
+                    <div class="plans-container">
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$ 15/mes</li>
+                                <li class="plan-name">Padrao</li>
+                                <li>2GB de espaco em disco</li>
+                                <li>10 subdominios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>Suporte 24/7</li>
+                                <li class="plan-btn">Selecionar</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
