projeto hdc host - html do projeto parte 2

--- a/html5-css3-avancado/projeto-hdchost/index.html
+++ b/html5-css3-avancado/projeto-hdchost/index.html
@@ -67,9 +67,68 @@
                                 <li class="plan-btn">Selecionar</li>
                             </ul>
                         </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$ 30/mes</li>
+                                <li class="plan-name">Dedicado</li>
+                                <li>5GB de espaco em disco</li>
+                                <li>20 subdominios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>Suporte 24/7</li>
+                                <li class="plan-btn">Selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price recommended">R$ 50/mes</li>
+                                <li class="plan-name">Dedicado plus</li>
+                                <li>10GB de espaco em disco</li>
+                                <li>100 subdominios</li>
+                                <li>100 contas de email</li>
+                                <li>c-panel</li>
+                                <li>Suporte 24/7</li>
+                                <li class="plan-btn recommended">Selecionar</li>
+                            </ul>
+                        </div>
+                        <div class="plan">
+                            <ul>
+                                <li class="price">R$ 100/mes</li>
+                                <li class="plan-name">Cloud</li>
+                                <li>200GB de espaco em disco</li>
+                                <li>200 subdominios</li>
+                                <li>25 contas de email</li>
+                                <li>c-panel</li>
+                                <li>Suporte 24/7</li>
+                                <li class="plan-btn">Selecionar</li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
+
+                <section class="searchdomain-container">
+                    <h2>Buscar dominio</h2>
+                    <p>Veja se o dominio que vc deseja esta disponivel</p>
+                    <form>
+                        <input type="text" name="domain" placeholder="Digite seu dominio desejado" >
+                        <input type="submit" value="buscar dominio" >
+                    </form>
+                </section>
+
+                <section class="contact-container">
+                    <h2>Entre em contat</h2>
+                    <p>mande uma mensagem para nos conversarmos sobre a melhor hospedagem para seu negocio</p>
+                    <form>
+                        <input type="text" name="name" placeholder="seu nome" >
+                        <input type="email" name="email" placeholder="seu email" >
+                        <textarea name="message" placeholder="Digite sua mensagem"></textarea>
+                        <input type="submit" value="enviar">
+                    </form>
+                </section>
             </main>
+            <footer>
+                hora de codar
+            </footer>
         </div>
     </body>
 </html>
