projeto hdc host - html do projeto parte 2

--- a/html5-css3-avancado/projeto-hdchost/index.html
+++ b/html5-css3-avancado/projeto-hdchost/index.html
@@ -116,8 +116,8 @@
                 </section>
 
                 <section class="contact-container">
-                    <h2>Entre em contat</h2>
-                    <p>mande uma mensagem para nos conversarmos sobre a melhor hospedagem para seu negocio</p>
+                    <h2>Entre em contato</h2>
+                    <p>Mande uma mensagem para nos conversarmos sobre a melhor hospedagem para seu negocio</p>
                     <form>
                         <input type="text" name="name" placeholder="seu nome" >
                         <input type="email" name="email" placeholder="seu email" >
