projeto whatsapp web - criando html da barra lateral parte 1

--- a/html5-css3-avancado/projeto-whatsapp/index.html
+++ b/html5-css3-avancado/projeto-whatsapp/index.html
@@ -7,6 +7,28 @@
         <script src="https://kit.fontawesome.com/bf7e05c402.js"></script>
     </head>
     <body>
-        <h1>WhatsApp web</h1>
+        <div class="container">
+            <aside class="sidebar">
+                <div class="toolbar-container">
+                    <img class="user-photo" src="img/avatar1.png" >
+                    <div class="auxicons-toolbar-container">
+                        <i class="fas fas-spinner"></i>
+                        <i class="fas fas-comment-alt"></i>
+                        <i class="fas fas-ellipsis-v"></i>
+                    </div>
+                </div>
+                <div class="notification-container">
+                    <i class="fas fa-bell-slash"></i>
+                    <p class="receive-notification">Receba notificacoes de novas mensagens</p>
+                    <p class="activate-notification">
+                        Ativar notificacoes na area de trabalho
+                        <i class="fa fa-angle-right"></i>
+                    </p>
+                </div>
+            </aside>
+            <main class="chat-container">
+
+            </main>
+        </div>
     </body>
 </html>
