projeto whatsapp web - criando html da barra lateral parte 2

--- a/html5-css3-avancado/projeto-whatsapp/index.html
+++ b/html5-css3-avancado/projeto-whatsapp/index.html
@@ -25,6 +25,52 @@
                         <i class="fa fa-angle-right"></i>
                     </p>
                 </div>
+                <div class="search-container">
+                    <i id="contact-search" class="fas fa-search"></i>
+                    <input type="text" name="search" id="search" placeholder="Procurar ou comecar uma nova conversa" >
+                </div>
+                <div class="contacts-container">
+                    <div class="contact-box active-chat">
+                        <img class="user-photo" src="img/avatar2.png" >
+                        <div class="user-info">
+                            <p class="user-name">Sabrina matos</p>
+                            <p class="user-messagepreview">
+                                <i class="fas fa-check-double"></i>
+                                oi tudo bem
+                            </p>
+                        </div>
+                        <div class="message-info">
+                            <p class="message-time">22:22</p>
+                            <p class="message-peding"></p>
+                        </div>
+                    </div>
+                    <div class="contact-box">
+                        <img class="user-photo" src="img/avatar3.png" >
+                        <div class="user-info">
+                            <p class="user-name">Joao augusto</p>
+                            <p class="user-messagepreview">
+                                esta disponivel para um frela
+                            </p>
+                        </div>
+                        <div class="message-info">
+                            <p class="message-time">11:22</p>
+                            <p class="message-peding"></p>
+                        </div>
+                    </div>
+                    <div class="contact-box">
+                        <img class="user-photo" src="img/avatar4.png" >
+                        <div class="user-info">
+                            <p class="user-name">Maria silva</p>
+                            <p class="user-messagepreview">
+                                o projeto ficou perfeito
+                            </p>
+                        </div>
+                        <div class="message-info">
+                            <p class="message-time">10:22</p>
+                            <p class="message-peding"></p>
+                        </div>
+                    </div>
+                </div>
             </aside>
             <main class="chat-container">
 
