projeto whatsapp web - criando html da secao de chat parte 1

--- a/html5-css3-avancado/projeto-whatsapp/index.html
+++ b/html5-css3-avancado/projeto-whatsapp/index.html
@@ -12,9 +12,9 @@
                 <div class="toolbar-container">
                     <img class="user-photo" src="img/avatar1.png" >
                     <div class="auxicons-toolbar-container">
-                        <i class="fas fas-spinner"></i>
-                        <i class="fas fas-comment-alt"></i>
-                        <i class="fas fas-ellipsis-v"></i>
+                        <i class="fas fa-spinner"></i>
+                        <i class="fas fa-comment-alt"></i>
+                        <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </div>
                 <div class="notification-container">
@@ -73,7 +73,18 @@
                 </div>
             </aside>
             <main class="chat-container">
-
+                <nav class="chat-navbar">
+                    <div class="contactinfo-container">
+                        <img src="img/avatar2.png" class="user-photo" >
+                        <p class="user-name">Sabrina matos</p>
+                    </div>
+                    <ul class="chattools-container">
+                        <li><i class="fas fa-search"></i></li>
+                        <li><i class="fas fa-paperclip"></i></li>
+                        <li><i class="fas fa-ellipsis-v"></i></li>
+                        <li><i class="fas fa-search"></i></li>
+                    </ul>
+                </nav>
             </main>
         </div>
     </body>
