--- a/html5-css3-avancado/projeto-whatsapp/index.html
+++ b/html5-css3-avancado/projeto-whatsapp/index.html
@@ -85,6 +85,18 @@
                         <li><i class="fas fa-search"></i></li>
                     </ul>
                 </nav>
+                <div class="messages-container">
+                    <div class="bg-image"></div>
+                    <div class="chat-messages">
+                        <p class="guest-message">Ola, bom dia</p>
+                        <p class="user-message">Oi, tudo bem</p>
+                    </div>
+                </div>
+                <div class="sendmessage-container">
+                    <i class="fas fa-grin"></i>
+                    <input id="chatmessage" type="text" name="message" class="userinput" placeholder="Digite sua mensagem" >
+                    <i class="fas fa-microphone"></i>
+                </div>
             </main>
         </div>
     </body>
