--- a/html5-css3-avancado/projeto-google/index.html
+++ b/html5-css3-avancado/projeto-google/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Turing - Pesquisa Google</title>
+    <!-- Font Icon -->
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="css/styles.css" >
 </head>
 <body>
