--- a/html5-css3-avancado/projeto-google/index.html
+++ b/html5-css3-avancado/projeto-google/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Turing - Pesquisa Google</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Font Icon -->
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-    <link rel="stylesheet" href="css/styles.css" >
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>teste</h1>
