--- a/html5-css3-avancado/projeto-google/index.html
+++ b/html5-css3-avancado/projeto-google/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header>
-        <div class="input-box">
+        <div id="input-box">
             <img src="img/google_logo.png" alt="google logo" >
             <form action="">
                 <input type="text" value="alan turing" name="searcg" >
                 <span class="lnr lnr-magnifier" id="search-icon"></span>
-                <span class="lnr lnr-keyboard" id="search-icon"></span>
-                <span class="lnr lnr-mic" id="search-icon"></span>
+                <span class="lnr lnr-keyboard" id="keyboard-icon"></span>
+                <span class="lnr lnr-mic" id="mic-icon"></span>
             </form>
         </div>
         <nav>
