projeto google - estrutura do conteudo principal parte 1

--- a/html5-css3-avancado/projeto-google/index.html
+++ b/html5-css3-avancado/projeto-google/index.html
@@ -34,5 +34,16 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
+        <main>
+            <p id="results">Aproximadamente 14.00000 resultados (0.38 segundos)</p>
+            <div class="search-result-box">
+                <a class="ref-link" href="#">pt.wikipedia > wiki > alan tuing <span class="triangle"></span></a>
+                <a class="main-link" href="#">Alan turing - wikipedia, a enciclopedia livre</a>
+                <a class="search-result-desc" href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti laborum doloribus in at omnis. Quo assumenda, enim eaque reprehenderit eius et ratione modi sed adipisci, sunt molestias natus? Deleniti, fuga.</a>
+                
+            </div>
+        </main>
+    </div>
 </body>
 </html>
