projeto instagram - html do projeto parte 2

--- a/html5-css3-avancado/projeto-intagram/index.html
+++ b/html5-css3-avancado/projeto-intagram/index.html
@@ -31,10 +31,51 @@
                         <span>Ou</span>
                     </div>
                     <!-- links alternativos -->
-                    <div id="other-links"></div>
+                    <div id="other-links">
+                        <div id="facebook-login">
+                            <a href="#">
+                                <img src="img/logo_facebook.svg" alt="facebook">
+                                <span>Entrar com o facebook</span>
+                            </a>
+                        </div>
+                        <div id="forgot-pass">
+                            <a href="#">Esqueceu a senha ?</a>
+                        </div>
+                    </div>
+                </div>
+                <div id="register-container">
+                    <p>Não tem uma conta ? <a href="#">Cadastre-se</a> </p>
+                </div>
+                <div id="get-app-container">
+                    <p>Obtenha o plicativo</p>
+                    <a href="#">
+                        <img src="img/botao_apple.png" alt="Apple Store">
+                    </a>
+                    <a href="#">
+                        <img src="img/botao_google_play.png" alt="Google play">
+                    </a>
                 </div>
             </div>
         </div>
     </main>
+    <!-- rodape -->
+     <footer>
+        <nav>
+            <ul id="footer-links">
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">Impresa</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Carreiras</a></li>
+                <li><a href="#">Privacidade</a></li>
+                <li><a href="#">Termos</a></li>
+                <li><a href="#">Localizacoes</a></li>
+                <li><a href="#">Contas mais relevantes</a></li>
+                <li><a href="#">HashTags</a></li>
+                <li><a href="#">Idiomas</a></li>
+            </ul>
+        </nav>
+        <p id="copyright">Instagram facebook</p>
+     </footer>
 </body>
 </html>
