--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -14,7 +14,43 @@
     <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 </head>
 <body>
-    <h1>InDecor</h1>
-    <i class="bi bi-x-octagon-fill"></i>
+    <header id="event-description">
+        <div id="disclainmer">
+            <h2>InDecor</h2>
+            <p class="about-event">
+                Um evento para evolucionar a sua criatividade
+            </p>
+            <p>Data do evento:</p>
+            <p class="event-date">Domingo, 28 de maio, a partir das 14h</p>
+        </div>
+        <div id="subscription-form">
+            <p>Preencha o formulario para receber os detalhes do evento</p>
+            <form class="form-group">
+                <div class="form-group">
+                    <label for="name">Nome</label>
+                    <input type="text" name="name" placeholder="Digite seu nome">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" placeholder="Digite seu melhor email">
+                </div>
+                <div class="form-group">
+                    <label for="phonr">Telefone</label>
+                    <input type="text" name="phone" placeholder="Numero do whatsap">
+                </div>
+                <div class="form-group">
+                    <label for="interest">Principal Interesse</label>
+                    <select name="interest">
+                        <option value="" disabled selected>Selecione</option>
+                        <option value="apartment" >Apartamentos</option>
+                        <option value="house" >Casas</option>
+                        <option value="garden" >jardins</option>
+                        <option value="other" >Outros</option>
+                    </select>
+                </div>
+                <input type="submit" class="btn" value="Quero me inscrever" />
+            </form>
+        </div>
+    </header>
 </body>
 </html>
