projeto landing page - corrige id de div

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header id="event-description">
-        <div id="disclainmer">
+        <div id="disclaimer">
             <h2>InDecor</h2>
             <p class="about-event">
                 Um evento para evolucionar a sua criatividade
