projeto landing page - html sessao de beneficios

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -52,5 +52,25 @@
             </form>
         </div>
     </header>
+
+    <section id="key-benefits">
+        <h2>O que vc vai aprender</h2>
+        <div class="benefits">
+            <div class="benefit">
+                <div id="benefit-1" class="benefit-img"></div>
+                <p>Alguma coisa muito legal, que vai fazer a diferença na vida do participante</p>
+            </div>
+
+            <div class="benefit">
+                <div id="benefit-1" class="benefit-img"></div>
+                <p>Alguma coisa muito legal, que vai fazer a diferença na vida do participante</p>
+            </div>
+
+            <div class="benefit">
+                <div id="benefit-1" class="benefit-img"></div>
+                <p>Alguma coisa muito legal, que vai fazer a diferença na vida do participante</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
