projeto landing page - html sessao de localizacao

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -72,5 +72,19 @@
             </div>
         </div>
     </section>
+
+    <section id="location">
+        <div id="address">
+            <i class="bi bi-geo-alt-fill"></i>
+            <div id="address-details">
+                <p>rua do event</p>
+                <p>bairro de tal</p>
+                <p>abertura</p>
+            </div>
+        </div>
+        <div id="about-location">
+
+        </div>
+    </section>
 </body>
 </html>
