projeto landing page - css sessao de localizacao

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -77,13 +77,17 @@
         <div id="address">
             <i class="bi bi-geo-alt-fill"></i>
             <div id="address-details">
-                <p>rua do event</p>
+                <p>rua do evento, 133</p>
                 <p>bairro de tal</p>
-                <p>abertura</p>
+                <p>abertura: 14h</p>
             </div>
         </div>
         <div id="about-location">
-
+            <h3>local de destaque</h3>
+            <p>
+                O evento sera realizado em um local prestigiado pelos amante de desing de interiores, onde teremos exemplos de varios ambientes,
+                tanto internos como externos
+            </p>
         </div>
     </section>
 </body>
