projeto landing page - html da sessao de detalhes

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -90,5 +90,38 @@
             </p>
         </div>
     </section>
+
+    <section id="details">
+        <div class="detail" id="detail-1">
+            <img src="img/hrz-3.jpg" alt="sala decorada em tons claros">
+            <div class="detail-description">
+                <h3>Conheça os ambientes que você vai aprender a decorar</h3>
+            </div>
+        </div>
+        <div class="detail" id="detail-2">
+            <img src="img/hrz-4.jpg" alt="sala de jantar decorada">
+            <div class="detail-description">
+                <h3>detalhes</h3>
+                <ul>
+                    <li>Posicionamento</li>
+                    <li>Aproveitamento de espaco</li>
+                    <li>Combinacao de cores</li>
+                    <li>Organizacao</li>
+                    <li>E muito mas ....</li>
+                </ul>
+            </div>
+        </div>
+        <div class="detail" id="detail-3">
+            <img src="img/hrz-5.jpg" alt="sala decorada em tons puros">
+            <div class="detail-description">
+                <h3>Objetos</h3>
+                <ul>
+                    <li>Cadeiras</li>
+                    <li>Mesas</li>
+                    <li>Espelhos</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
