--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -99,7 +99,6 @@
             </div>
         </div>
         <div class="detail" id="detail-2">
-            <img src="img/hrz-4.jpg" alt="sala de jantar decorada">
             <div class="detail-description">
                 <h3>detalhes</h3>
                 <ul>
@@ -110,6 +109,7 @@
                     <li>E muito mas ....</li>
                 </ul>
             </div>
+            <img src="img/hrz-4.jpg" alt="sala de jantar decorada">
         </div>
         <div class="detail" id="detail-3">
             <img src="img/hrz-5.jpg" alt="sala decorada em tons puros">
@@ -119,6 +119,9 @@
                     <li>Cadeiras</li>
                     <li>Mesas</li>
                     <li>Espelhos</li>
+                    <li>Plantas</li>
+                    <li>Cortinas</li>
+                    <li>E muito mas ....</li>
                 </ul>
             </div>
         </div>
