projeto landing page - html da sessao cts

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -126,5 +126,10 @@
             </div>
         </div>
     </section>
+
+    <section id="cta">
+        <h3>Gostou ? Então se inscreva:</h3>
+        <button class="btn">Solicitar Inscrição</button>
+    </section>
 </body>
 </html>
