projeto landing page - html e css da sessao footer

--- a/html5-css3-avancado/projeto-landing-page/index.html
+++ b/html5-css3-avancado/projeto-landing-page/index.html
@@ -131,5 +131,11 @@
         <h3>Gostou ? Então se inscreva:</h3>
         <button class="btn">Solicitar Inscrição</button>
     </section>
+
+    <footer id="footer">
+        <h3>InDecor</h3>
+        <p>A evoluç~ao da decoração de interiores</p>
+        <p><span>Entre em contato:</span>oi@indecor.com.br</p>
+    </footer>
 </body>
 </html>
