--- a/html5-css3-avancado/projeto-media-query/index.html
+++ b/html5-css3-avancado/projeto-media-query/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media query</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <h1>Media query</h1>
+    <h2>Testando algo</h2>
+    <h3>Testando mas alguma coisa</h3>
+    <h4>Cuidado nas media queries</h4>
+    <h5>breakpoints</h5>
 </body>
 </html>
