projeto caelum-wd-43 - apostila de frontend da caelum

--- a/caelum-wd-43/index.html
+++ b/caelum-wd-43/index.html
@@ -10,7 +10,7 @@
     <h2>Bem-vindo a Mirror Fashion, sua loja de roupas e acessorios</h2>
     <ul>
         <li>Confira nossas promoções</li>
-        <li>REceba informações sobre nossos lancamentos por email</li>
+        <li>Receba informações sobre nossos lancamentos por email</li>
         <li>Navegue por todos nossos produtos em catalogo</li>
         <li>Compre sem sair de casa</li>
     </ul>
