--- a/hora-de-codar/2_primeiros_passos/index.html
+++ b/hora-de-codar/2_primeiros_passos/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap por aquivos</title>
     <link rel="stylesheet" href="css/bootstrap.css" >
+    <script src="js/bootstrap.js" defer ></script>
 </head>
 <body>
     <h1>testando bootstrap por aquivos</h1>
