--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -10,5 +10,14 @@
 <body>
     <h1>secao de layout</h1>
     <button class="btn btn-primary">clica em mim</button>
+
+    <!-- container -->
+    <div class="container">
+        <h2>titulo da secao</h2>
+        <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+    </div>
 </body>
 </html>
