bootstrap 5 - container fluid

--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -19,5 +19,14 @@
         <p>Conteudo do container</p>
         <p>Conteudo do container</p>
     </div>
+
+    
+    <div class="container-fluid">
+        <h2>titulo da secao</h2>
+        <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+    </div>
 </body>
 </html>
