bootstrap 5 - container por breakpoints

--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -20,12 +20,27 @@
         <p>Conteudo do container</p>
     </div>
 
-    
     <div class="container-fluid">
         <h2>titulo da secao</h2>
         <p>Conteudo do container</p>
         <p>Conteudo do container</p>
         <p>Conteudo do container</p>
+        <p>Conteudo do container</p>
+    </div>
+
+    <!-- container breakpoints -->
+    <div class="container-sm">
+        <h2>titulo da secao</h2>
+        <p>Conteudo do container</p>
+    </div>
+
+    <div class="container-md">
+        <h2>titulo da secao</h2>
+        <p>Conteudo do container</p>
+    </div>
+
+    <div class="container-lg">
+        <h2>titulo da secao</h2>
         <p>Conteudo do container</p>
     </div>
 </body>
