bootstrap 5 - criando grids

--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -43,5 +43,28 @@
         <h2>titulo da secao</h2>
         <p>Conteudo do container</p>
     </div>
+
+    <!-- grid -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>produto a</p>
+            </div>
+            <div class="col">
+                <p>produto b</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>produto c</p>
+            </div>
+            <div class="col">
+                <p>produto d</p>
+            </div>
+            <div class="col">
+                <p>produto e</p>
+            </div>
+        </div>
+    </div> 
 </body>
 </html>
