bootstrap 5 - numero maximo de colunas

--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -92,5 +92,21 @@
             <div class="col-4"></div>
         </div>
     </div>
+
+    <!-- limitacao de colunas -->
+     <div class="container">
+        <div class="row row-cols-2">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row row-cols-2">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row row-cols-2">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+     </div>
 </body>
 </html>
