--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -123,5 +123,19 @@
             <div class="col-6"></div>
         </div>
     </div>
+
+    <!-- alinhamento horizontal -->
+    <div class="container vertical">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-3"></div>
+        </div>
+    </div>
+
+    <div class="container vertical">
+        <div class="row justify-content-end align-items-end">
+            <div class="col-3"></div>
+            <div class="col-3"></div>
+        </div>
+    </div>
 </body>
 </html>
