bootstrap 5 - adicionando gutter

--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -196,5 +196,17 @@
             <div class="col-md-3 offset-md-9"></div>
         </div>
     </div>
+
+    <!-- gutters -->
+    <div class="container" id="gutter">
+        <div class="row gx-1">
+            <div class="col">
+                <p>gx</p>
+            </div>
+            <div class="col">
+                <p>gx</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
