bootstrap 5 - adicionando gutter

--- a/hora-de-codar/3_layout/1_aula/index.html
+++ b/hora-de-codar/3_layout/1_aula/index.html
@@ -207,6 +207,22 @@
                 <p>gx</p>
             </div>
         </div>
+        <div class="row gy-4">
+            <div class="col">
+                <p>gy</p>
+            </div>
+            <div class="col">
+                <p>gy</p>
+            </div>
+        </div>
+        <div class="row g-5">
+            <div class="col">
+                <p>gy</p>
+            </div>
+            <div class="col">
+                <p>gy</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
