bootstrap 5 - tarefa 01 solucao

--- a/hora-de-codar/3_layout/2_tarefa/index.html
+++ b/hora-de-codar/3_layout/2_tarefa/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="css/styles.css" >
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col impar"></div>
+            <div class="col par"></div>
+            <div class="col impar"></div>
+            <div class="col par"></div>
+            <div class="col impar"></div>
+            <div class="col par"></div>
+            <div class="col impar"></div>
+            <div class="col par"></div>
+        </div>
+    </div>
 </body>
 </html>
