--- a/hora-de-codar/4_icones/2_tarefa/index.html
+++ b/hora-de-codar/4_icones/2_tarefa/index.html
@@ -6,21 +6,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" >
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 confirmation">
                 <i class="bi bi-check-circle-fill"></i>
                 <span>Essa é uma confirmação do sistema</span>
             </div>
-            <div class="col-12">
+            <div class="col-12 message">
                 <i class="bi bi-dash-circle-fill"></i>
-                <span>Essa é uma confirmação do sistema</span>
+                <span>Essa é uma mensagem do sistema</span>
             </div>
-            <div class="col-12">
+            <div class="col-12 warning">
                 <i class="bi bi-exclamation-circle-fill"></i>
-                <span>Essa é uma confirmação do sistema</span>
+                <span>Essa é um aviso do sistema</span>
             </div>
         </div>
     </div>
