--- a/hora-de-codar/5_art/index.html
+++ b/hora-de-codar/5_art/index.html
@@ -13,7 +13,22 @@
     <link rel="stylesheet" href="css/styles.css" >
 </head>
 <body>
-    <h1>testando bootstrap</h1>
-    <i class="bi bi-x-lg"></i>
+    <div class="container-fluid">
+        <header class="row" id="header">
+            <div id="logo-container">
+                <img src="img/art_logo.svg" alt="Art" id="Logo" >
+                <h1>Art</h1>
+            </div>
+            <p>Exibições de arte urbana</p>
+        </header>
+        <nav id="navbar" class="container">
+            <div class="row justify-content-center">
+                <a href="#">Home</a>
+                <a href="#">Projetos</a>
+                <a href="#">Artistas</a>
+                <a href="#">Contato</a>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
