--- a/hora-de-codar/5_art/index.html
+++ b/hora-de-codar/5_art/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <header class="row" id="header">
             <div id="logo-container">
-                <img src="img/art_logo.svg" alt="Art" id="Logo" >
+                <img src="img/art_logo.svg" alt="Art" id="logo" >
                 <h1>Art</h1>
             </div>
             <p>Exibições de arte urbana</p>
