--- a/hora-de-codar/5_art/index.html
+++ b/hora-de-codar/5_art/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" >
 </head>
 <body>
+    <!-- header -->
     <div class="container-fluid">
         <header class="row" id="header">
             <div id="logo-container">
