--- a/hora-de-codar/5_art/index.html
+++ b/hora-de-codar/5_art/index.html
@@ -31,5 +31,15 @@
             </div>
         </nav>
     </div>
+    <!-- main image -->
+    <div class="container" id="main-image-container">
+        <div class="main-image center-image">
+            <div class="main-image-info">
+                <h2>Arte no muro de davi</h2>
+                <p class="secondary-color">Realizado em 20/05/2021</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
