--- a/hora-de-codar/5_art/index.html
+++ b/hora-de-codar/5_art/index.html
@@ -41,5 +41,49 @@
             </div>
         </div>
     </div>
+    <!-- galery -->
+    <div class="container" id="gallery-container">
+        <div class="col-12">
+            <h1>Artes em destaque</h1>
+        </div>
+        <div class="row gx-5">
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img1"></div>
+                <h3>Obra de arthur</h3>
+                <p class="secondary-color">Realizada em 26/01/2222</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img2"></div>
+                <h3>Grafite da avenida paulista</h3>
+                <p class="secondary-color">Realizada em 26/01/2029</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img3"></div>
+                <h3>Obra de paulo</h3>
+                <p class="secondary-color">Realizada em 26/01/2000</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img4"></div>
+                <h3>Grafite no centro da cidade</h3>
+                <p class="secondary-color">Realizada em 26/01/2222</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img5"></div>
+                <h3>Obra de arthur</h3>
+                <p class="secondary-color">Realizada em 26/01/2222</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img6"></div>
+                <h3>Obra de arthur</h3>
+                <p class="secondary-color">Realizada em 26/01/2222</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
