--- a/hora-de-codar/5_art/index.html
+++ b/hora-de-codar/5_art/index.html
@@ -79,5 +79,21 @@
             </div>
         </div>
     </div>
+    <!-- footer -->
+    <footer class="container">
+        <p class="secondary-color">Nos encontre nas redes socias</p>
+        <div class="row justify-content-center" id="social-icons-container">
+            <div class="col-1">
+                <a href="#"><i class="bi bi-facebook secondary-color"></i></a>
+            </div>
+            <div class="col-1">
+                <a href="#"><i class="bi bi-instagram secondary-color"></i></a>
+            </div>
+            <div class="col-1">
+                <a href="#"><i class="bi bi-twitter secondary-color"></i></a>
+            </div>
+        </div>
+        <p class="secondary-color">Art 2021</p>
+    </footer>
 </body>
 </html>
