--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/styles.css" >
 </head>
 <body>
+    <!-- headings -->
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h6>Heading 6</h6>
 
+    <p class="h1">Paragrafo Heading</p>
+    <span class="h3">Meu span heading</span>
+    <span class="h3">Meu span heading</span>
+    
 </body>
 </html>
