bootstrap 5 - modulo conteudos - titulo com display

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -16,6 +16,9 @@
     <p class="h1">Paragrafo Heading</p>
     <span class="h3">Meu span heading</span>
     <span class="h3">Meu span heading</span>
-    
+
+    <!-- display -->
+    <h1 class="display-1">Chamando atenção</h1>
+    <p class="display-4">este é um substituto</p>
 </body>
 </html>
