bootstrap 5 - modulo conteudos - elementos inline

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -20,5 +20,17 @@
     <!-- display -->
     <h1 class="display-1">Chamando atenção</h1>
     <p class="display-4">este é um substituto</p>
+
+    <!-- elementos inline -->
+    <p >Precisamos <mark>destacar isso aqui</mark> para vender esse produto</p>
+    <p >Precisamos <span class="mark">destacar isso aqui</span> para vender esse produto</p>
+
+    <p>Lista de tarefas</p>
+    <p><del>funcionalidade a</del></p>
+    <p><span class="text-decoration-line-through">funcionalidade b</span></p>
+    <p>funcionalidade c</p>
+
+    <p>O <strong>produto x</strong> é o melhor do mercado</p>
+
 </body>
 </html>
