bootstrap 5 - modulo conteudos - citacoes

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -32,5 +32,19 @@
 
     <p>O <strong>produto x</strong> é o melhor do mercado</p>
 
+    <!-- cotacoes -->
+    <blockquote class="blockquote">
+        <p>html e css são as bases do bootstrap</p>
+    </blockquote>
+
+    <figure>
+        <blockquote class="blockquote">
+            Não deixe o ruido das opinoies dos outros abafar a sua propria voz interior
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            uma frase de steve jobs
+        </figcaption>
+    </figure>
+
 </body>
 </html>
