bootstrap 5 - modulo conteudos - citacoes

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -32,7 +32,7 @@
 
     <p>O <strong>produto x</strong> é o melhor do mercado</p>
 
-    <!-- cotacoes -->
+    <!-- citacoes -->
     <blockquote class="blockquote">
         <p>html e css são as bases do bootstrap</p>
     </blockquote>
