bootstrap 5 - modulo conteudos - listas

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -46,5 +46,26 @@
         </figcaption>
     </figure>
 
+    <!-- listas -->
+    <h2>listas de estilo</h2>
+    <ul class="list-unstyled">
+        <li>item a</li>
+        <li>item b</li>
+        <li>item c</li>
+    </ul>
+
+    <h2>Lista inline</h2>
+    <ul class="list-inline">
+        <li class="list-inline-item">
+            <a href="#">link 1</a>
+        </li>
+        <li class="list-inline-item">
+            <a href="#">link 2</a>
+        </li>
+        <li class="list-inline-item">
+            <a href="#">link 3</a>
+        </li>
+    </ul>
+
 </body>
 </html>
