--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -67,5 +67,10 @@
         </li>
     </ul>
 
+    <!-- imagens -->
+    <div class="col-md-4 m-4">
+        <img class="img-fluid" src="img/g_1.jpg" >
+    </div>
+
 </body>
 </html>
