bootstrap 5 - modulo conteudos - thumbnail

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -72,5 +72,10 @@
         <img class="img-fluid" src="img/g_1.jpg" >
     </div>
 
+    <!-- thumbnail -->
+    <div class="col-md-4 m-4">
+        <img class="img-thumbnail" src="img/avatar.png" >
+    </div>
+
 </body>
 </html>
