--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -77,5 +77,13 @@
         <img class="img-thumbnail" src="img/avatar.png" >
     </div>
 
+    <!-- figure-->
+    <div class="col-md-3 m-4">
+        <figure class="figure">
+            <img src="img/g_1.jpg" class="figure-img img-fluid rounded" >
+            <figcaption class="figure-caption">grafite</figcaption>
+        </figure>
+    </div>
+
 </body>
 </html>
