bootstrap 5 - modulo conteudos - tabelas

--- a/hora-de-codar/6_conteudo/1_aulas/index.html
+++ b/hora-de-codar/6_conteudo/1_aulas/index.html
@@ -85,5 +85,31 @@
         </figure>
     </div>
 
+    <!-- tabelas -->
+    <div class="col-6">
+        <table class="table m-4">
+            <thead>
+                <th scope="col">id</th>
+                <th scope="col">nome</th>
+                <th scope="col">sobrenome</th>
+                <th scope="col">email</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>matheus</td>
+                    <td>batisti</td>
+                    <td>mateys@gmail.com</td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>matheus</td>
+                    <td>batisti</td>
+                    <td>mateys@gmail.com</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
