bootstrap 5 - modulo conteudos - tarefa resolucao

--- a/hora-de-codar/6_conteudo/2_tarefa/index.html
+++ b/hora-de-codar/6_conteudo/2_tarefa/index.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row justify-content-center m-4">
+            <div class="col-12 text-center">
+                <h2>Veja esta imagem</h2>
+                <p>Contem uma <strong>forte cena</strong>, não acha</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <img src="img/paisagem.jpg" alt="paisagem" class="img-fluid">
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-3">
+                    <h4>Elementos:</h4>
+                    <ul>
+                        <li>ceu bonito</li>
+                        <li>arvore</li>
+                        <li>montanhas</li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h4>cores:</h4>
+                    <ul>
+                        <li>verde</li>
+                        <li>roxo</li>
+                        <li>azul</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
