bootstrap 5 - modulo formularios - criando um formulario

--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -9,5 +9,23 @@
 </head>
 <body>
     
+    <!-- criando form -->
+    <div class="col-4 m-4">
+        <h2>formulario de registro</h2>
+        <form>
+            <div class="mb-4">
+                <label for="email" class="form-label">e-mail</label>
+                <input type="email" class="form-control" id="email" name="email" aria-describedby="emailhelp" placeholder="insira seu email" >
+                <div id="emailhelp" class="form-text">nao conpartilhamos seu endereco de email</div>
+            </div>
+            <div class="mb-4">
+                <label for="password" class="form-label">Senha:</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="digite sua senha" >
+            </div>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </form>
+
+
+    </div>
 </body>
 </html>
