--- a/hora-de-codar/7_forms/1_aulas/index.html
+++ b/hora-de-codar/7_forms/1_aulas/index.html
@@ -48,5 +48,23 @@
 
 
     </div>
+
+
+    <!-- form-control -->
+    <div class="m-4">
+        <h2>crie seu post</h2>
+        <form>
+            <div class="col-4 m-4">
+                <label for="title" class="form-label">Titulo do post</label>
+                <input type="text" class="form-control form-control-sm" id="title" placeholder="digite seu titulo">
+            </div>
+            <div class="col-4 m-4">
+                <label for="content" class="form-label">Conteudo</label>
+                <textarea placeholder="digite o conteudo do post" rows="5" class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-success">Enviar</button>
+        </form>
+
+    </div>
 </body>
 </html>
